# auto-subs

AutoSubs-App/: .dockerignore
AutoSubs-App/src/: App.tsx  types.ts
AutoSubs-App/src-tauri/: .dockerignore  Cargo.toml  Dockerfile
AutoSubs-App/src-tauri/crates/autosubs-cli/: Cargo.toml
AutoSubs-App/src-tauri/crates/autosubs-cli/src/: main.rs
AutoSubs-App/src-tauri/crates/transcription-engine/src/: model_manager.rs
AutoSubs-App/src/components/dialogs/: history-settings-section.tsx  settings-dialog.tsx
AutoSubs-App/src/contexts/: SettingsContext.tsx  SubtitleDocumentContext.tsx
AutoSubs-App/src/i18n/locales/en/: translation.json
AutoSubs-App/src/utils/: file-utils.ts  retention.ts
